2008-02-18  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/SearchWidget.cs: Small workaround to be able to
	  build in mono 1.2.4 (mono 1.2.4 ignores usings in anon delegates).

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed Bug 362692 - Undoing
	  all changes should clear the modified flag of the editor.

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs: Implemented mouse wheel
	  zoom.

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Fixed find next selection
	  update.

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
	  gtk-gui/MonoDevelop.SourceEditor.SearchWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/SearchWidget.cs: replace/search patterns are
	  now static.

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed file system watcher.

2008-02-17  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/GotoLineNumberWidget.cs: Fixed goto line number
	  relative jump.

2008-02-17  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/SearchWidget.cs: Worked on search options.

2008-02-17  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
	  gtk-gui/MonoDevelop.SourceEditor.SearchWidget.cs,
	  gtk-gui/MonoDevelop.SourceEditor.GotoLineNumberWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs,