@@ -1,3 +1,9 @@
+2008-02-19  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.SourceEditor/SourceEditorView.cs,
+	  MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs,
+	  MonoDevelop.SourceEditor/SearchWidget.cs: Worked on selection.
+
 2008-02-18  Marcos David Marín Amador <MarcosMarin@gmail.com> 
 
 	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs,
